--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,6 @@
 .all_content {
-  width: 100%;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 15px;
@@ -14,13 +14,13 @@
 
 .container {
   display: grid;
-  grid-template-columns: auto 30%;
+  grid-template-columns: 70% 30%;
 }
 
 .container2 {
   display: grid;
-  grid-template-rows: auto auto auto;
-  grid-template-columns: auto auto;
+  grid-template-rows: 10% 1fr 20%;
+  grid-template-columns: 50% 50%;
   gap: 20px;
   place-items: center;
   justify-items: stretch;
